tests/assembler/good/bs_raw_65534.j
.class test
.super java/lang/Object

.const [mh] = MethodHandle invokeStatic Method LambdaTest1 lambda$main$0 (J)J
.bootstrap [bs:65532] = Bootstrap [mh] :
.bootstrap [bs:65534] = Bootstrap [mh] [mh] :
.end class
