tests/assembler/bad/code_in_code.j
.class public super test
.super java/lang/Object

.method public static varargs main : ([Ljava/lang/String;)V
    .code stack 94 locals 2
        return

        .code stack 94 locals 2
            return
        .end code
    .end code
.end method
